1.0.3 Code refactor Added simple command implementation (tab completion won`t work)